[tool.poetry]
name = "shopcasebaseclass"
version = "0.3.0"
description = ""
authors = ["a165963 <Nils.Rader@hydro.com>"]

[tool.poetry.dependencies]
python = "3.7.*"
pandas = "^1.1.1"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
ipykernel = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
